<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aceite"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="front.recoil.recoil.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/r"
        android:textColor="#d6d8db"
        android:textStyle="bold|italic"
        android:textSize="100dp"
        android:fontFamily="verdana"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/resto"
        android:textColor="#d6d8db"
        android:textStyle="bold|italic"
        android:textSize="50dp"
        android:fontFamily="verdana"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintVertical_bias="0.608" />

    <TextView
        android:layout_width="362dp"
        android:layout_height="357dp"
        android:layout_margin="10dp"
        android:text="@string/textoInicial"
        android:textColor="#d6d8db"
        android:textStyle="bold"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/textView2" />

    <RelativeLayout
        android:layout_width="85dp"
        android:layout_height="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <ListView
            android:id="@+id/menu"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#007095"
            android:choiceMode="singleChoice"
            android:divider="#005875"
            android:dividerHeight="2dp" />

    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>

